# github

./: .gitignore  Cargo.toml  Dockerfile  README.md  manifest.json
.github/workflows/: release.yml
examples/: basic_operations.py
skills/claude-code/: SKILL.md
skills/continue/: github.yaml
skills/cursor/: github.mdc
skills/windsurf/: github.md
src/: main.rs  service.rs
