[package]
name = "fgp-github"
version = "0.1.0"
edition = "2021"
description = "FGP daemon for GitHub operations"
license = "MIT"

[[bin]]
name = "fgp-github"
path = "src/main.rs"

[dependencies]
# FGP daemon SDK
fgp-daemon = { path = "../fgp-daemon" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for GitHub API (or use gh CLI)
# Using gh CLI for simplicity - no extra deps needed
